--- a/cap3/estilo.css
+++ b/cap3/estilo.css
@@ -22,7 +22,7 @@ body h2 {
     text-align: center;
     text-decoration: overline;
     background-color: gray;
-    padding-top: 10px;
+    padding: 10px;
 }
 
 .conteudo {
